--- a/index.css
+++ b/index.css
@@ -158,11 +158,11 @@ nav ul li a:hover::after{
 }
 
 .about-content{
-    font-size: 28px;
+    font-size: 25px;
 }
 
 .about-content span{
-    color: #DE3163  ;
+    color: #913831;
 }
 
 .tab-links.active-link::after{
@@ -195,11 +195,53 @@ nav ul li a:hover::after{
 
 #services{
     padding: 30px 0;
+    text-align: center;
 }
 
 .services-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    grid-gap: 10px;
     margin-top: 50px;
+    
+}
+
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+    color: #36454F;
+}
+
+.services-list div{
+        background-color: #262626;
+        padding: 40px;
+        font-size: 13px;
+        font-weight: 300;
+        border-radius: 10px;
+        color: white;
+        margin-left: 10px;
+}
+
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.services-list div h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.services-list div a{
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.services-list div:hover{
+    background-color: ;
 }
