--- a/index.css
+++ b/index.css
@@ -193,6 +193,10 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display: block;
 }
+
+#services h1{
+    color: #F9F6EE;
+}
 /*end of about css*/
 
 #services{
@@ -273,11 +277,12 @@ nav ul li a:hover::after{
     height: 100vh;
     border-radius: 10px;
     display: block;
+    transition: transform 0.5s;
 }
 
 .layer{
     width: 100%;
-    height: 100%;
+    height: 0%;
     background:linear-gradient(rgba(0,0,0,0.6),#ff004f);
     border-radius: 10px;
     position: absolute;
@@ -290,9 +295,58 @@ nav ul li a:hover::after{
     flex-direction: column;
     padding: 0 40px;
     text-align: center;
+    transition: height 0.5s;
 }
 .layer h3{
     font-weight: 500;
     margin-bottom: 20px;
     color: white;
+}
+
+.layer p{
+    font-weight: 500;
+    color: white;
+}
+
+#portfolio h1{
+    color: #F9F6EE;
+}
+
+.layer a{
+    margin-top: 20px;
+    color: #ff004f;
+    font-size: 18px;
+    line-height: 60px;
+    background-color: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
+.work:hover img{
+    transform: scale(1.1);
+}
+
+.work:hover img{
+    transform: scale(1.1);
+}
+
+.work:hover .layer{
+    height: 100%;
+}
+
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: white;
+    transition: 0.5s;
+}
+
+.btn:hover{
+    background-color: #ff004f;
 }
