--- a/index.css
+++ b/index.css
@@ -1,16 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Dancing+Script:wght@700&family=Kalam:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Kalam', cursive;
-
+    font-family: 'Roboto Slab', serif;
 } 
 
 body{
-    background-color: #36454F;
+    background-color: black;
     overflow-x: hidden;
 }
 
@@ -33,7 +31,7 @@ body{
 }
 
 #name{
-    color: #F9F6EE;
+    color: white;
     font-size: 30px;
     position: relative;
     text-decoration: none;
@@ -41,7 +39,7 @@ body{
 }
 
 #navbarlinks{
-    color: #F9F6EE;
+    color: white;
     font-size: 30px;
     position: relative;
     text-decoration: none;
@@ -64,7 +62,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #913831;
+    background-color: orange;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -79,7 +77,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #913831;
+    background-color: orange;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -98,17 +96,24 @@ nav ul li a:hover::after{
 .header-text h1{
     font-size: 60px;
     margin-top: 10px;
-    color: #F9F6EE;
+    color: white;
 }
 
 .header-text p{
-    color: #EDEADE;
+    color: white;
+}
+
+#navtable a span{
+    color: orange
+}
+
+#navtable li span{
+    color: orange
 }
 /* end of navbar css*/
 
 #about{
     padding: 50px 50px;
-    background: white;
     height: 100vh;
     width: 100vw;
 }
@@ -132,7 +137,7 @@ nav ul li a:hover::after{
 .about-title{
     font-size: 60px;
     font-weight: 600;
-    color: #36454F;
+    color: white;
 }
 
 .tab-titles{
@@ -152,7 +157,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #913831;
+    background: orange;
     position: absolute;
     left: 0;    
     bottom: -8px;
@@ -164,7 +169,7 @@ nav ul li a:hover::after{
 }
 
 .about-content span{
-    color: #913831;
+    color: orange;
 }
 
 .tab-links.active-link::after{
@@ -178,16 +183,28 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: #913831;
+    color: orange;
     font-size: 25px;
 }
 
 .tab-titles p span{
-    color: #913831;
+    color: orange;
+}
+
+.about-content{
+    color: white
+}
+
+.tab-titles p {
+    color: white
 }
 
 .tab-contents {
     display: none;
+}
+
+.tab-contents li{
+    color: white;
 }
 
 .tab-contents.active-tab{
@@ -195,12 +212,13 @@ nav ul li a:hover::after{
 }
 
 #services h1{
-    color: #F9F6EE;
+    color: white;
 }
 /*end of about css*/
 
 #services{
     padding: 30px 0;
+    margin-bottom: 25%;
 }
 
 .services-list{
@@ -252,7 +270,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div:hover{
-    background-color: #ff004f;
+    background-color: orange;
     transform: translateY(-10px);
 }
 /*end of service*/
@@ -262,7 +280,8 @@ nav ul li a:hover::after{
 }
 
 .work-list{
-    display: grid;
+    display: flex;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 10px;
     margin-top: 50px;
@@ -273,8 +292,8 @@ nav ul li a:hover::after{
     overflow: hidden;
 }
 .work img{
-    width: 100%;
-    height: 100vh;
+    width: auto;
+    height: auto;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
@@ -283,7 +302,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0%;
-    background:linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    background:linear-gradient(rgba(0,0,0,0.6),orange);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -314,7 +333,7 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: orange;
     font-size: 18px;
     line-height: 60px;
     background-color: #fff;
@@ -339,8 +358,8 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
-    padding: 14px;
+    border: 1px solid orange;
+    padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
     color: white;
@@ -348,5 +367,32 @@ nav ul li a:hover::after{
 }
 
 .btn:hover{
-    background-color: #ff004f;
+    background-color: orange;
+}
+/*Contact*/
+#contact{
+    color: white;
+    
+}
+
+.contact-left h1{
+    color: white;
+}
+
+.contact-left{
+    flex-basis: 50%;
+    text-align: center;
+}
+
+.contact-right{
+    flex-basis: 50%;
+    }
+.social-icons i{
+    color: orange;
+    font-size: 20px;
+}
+
+.contact-left p i{
+    color: orange;
+    font-size: 20px;
 }
