--- a/index.css
+++ b/index.css
@@ -387,12 +387,32 @@ nav ul li a:hover::after{
 .contact-right{
     flex-basis: 50%;
     }
-.social-icons i{
-    color: orange;
-    font-size: 20px;
-}
+
 
 .contact-left p i{
     color: orange;
     font-size: 20px;
+    margin-top: 15px;
+}
+
+.social-icons {
+    margin-top: 30px;
+}
+
+.social-icons a{
+    text-decoration: none;
+    font-size: 40px;
+    margin-right: 15px;
+    display: inline-block;
+    color: orange;
+    transition: transform 0.5s;
+}
+
+.social-icons a:hover {
+    color: white;
+    transform: translateY(-5px);
+}
+
+.btn.btn2{
+    color: white;
 }
