--- a/index.css
+++ b/index.css
@@ -24,6 +24,10 @@ body{
     padding: 10px 10%;
 }
 
+.header-text img{
+    border-radius: 10px;
+}
+
 #brandlogo{
     margin: 10px;
     width: auto;
@@ -91,6 +95,7 @@ nav ul li a:hover::after{
 .header-text{
     margin-top: 20%;
     font-size: 30px;
+    margin-bottom: 20%;
 }
 
 .header-text h1{
@@ -261,10 +266,14 @@ nav ul li a:hover::after{
     margin-bottom: 15px;
 }
 
+.services-list div p{
+    font-size: 20px;
+}
+
 .services-list div a{
     text-decoration: none;
     color: #F9F6EE;
-    font-size: 12px;
+    font-size: 15px;
     margin-top: 20px;
     display: inline-block;
 }
@@ -372,7 +381,7 @@ nav ul li a:hover::after{
 /*Contact*/
 #contact{
     color: white;
-    
+    margin-top: 10%;
 }
 
 .contact-left h1{
@@ -380,12 +389,12 @@ nav ul li a:hover::after{
 }
 
 .contact-left{
-    flex-basis: 50%;
+    flex-basis: 60%;
     text-align: center;
 }
 
 .contact-right{
-    flex-basis: 50%;
+    flex-basis: 40%;
     }
 
 
@@ -413,6 +422,126 @@ nav ul li a:hover::after{
     transform: translateY(-5px);
 }
 
-.btn.btn2{
+#btn{
+    display: block;
+    margin-left: 120px;
+    width: fit-content;
+    border: 1px solid orange;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
     color: white;
+    transition: 0.5s;
+    font-size: 15px;
+    background-color: black;
+}
+
+#btn:hover{
+    background-color: orange;
+    cursor: pointer;
+}
+
+.content-right form{
+    width: 100%;
+}
+
+form input, form textarea{
+    width: 50%;
+    border: 0;
+    outline: none;
+    background: white;
+    padding: 15px;
+    margin: 15px 0;
+    color: black;
+    border-radius: 6px;
+    font-size: 18px;
+}
+
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: orange;
+    color: black;
+    margin-top: 10%;
+}
+
+
+/*css for smaller screen*/
+#navcontainer i{
+    display: none;
+}
+
+
+@media only screen and (max-width: 600px)
+{
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+    }
+
+    .header-text h1{
+        font-size: 30px;
+    }
+
+    #navcontainer i{
+        color: white;
+        font-size: 25px;
+        display: block;
+    }
+    nav ul{
+        background-color: #818589	;
+        position: absolute;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    #closebtn{
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fa-solid{
+        position: absolute;
+        top: 0px;
+        right: -5px;
+        cursor: pointer;
+    }
+
+    .sub-title{
+        font-size: 40px;
+        margin-top: 100%;
+    }
+
+    .about-col-2 h1{
+        font-size: 40px; 
+    }
+    .about-col-2 h3{
+        font-size: 17px;
+    }
+
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+    }
+
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px ;
+    }
+
+    .work-list{
+        display: contents;
+        grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 10px;
+        margin-top: 50px;
+    }
 }
